--- a/src/components/MessageThreadList.css
+++ b/src/components/MessageThreadList.css
@@ -175,6 +175,7 @@
   line-height: 1.4;
   display: -webkit-box;
   -webkit-line-clamp: 2;
+  line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
@@ -189,9 +190,9 @@
     top: 0;
     right: 0;
     left: 0;
+    bottom: 0;
     width: 100%;
-    max-height: 100vh;
-    height: 100vh;
+    height: auto;
     border-radius: 0;
   }
 
